Fix texture modes for textures with alpha channel

This fixes subtract and multiply alpha modes for brush textures when the
texture file has an alpha channel.  Also fixes gradient map mode so it
respects alpha in textures that have it.

BUG:427153