plugins/paintops/libpaintop/KisTextureMaskInfo.h
@@ -35,7 +35,7 @@ class KisResourcesInterface;
 class KisTextureMaskInfo : public boost::equality_comparable<KisTextureMaskInfo>
 {
 public:
-    KisTextureMaskInfo(int levelOfDetail);
+    KisTextureMaskInfo(int levelOfDetail, bool preserveAlpha);
     KisTextureMaskInfo(const KisTextureMaskInfo &rhs);
 
     ~KisTextureMaskInfo();
@@ -60,6 +60,7 @@ public:
 
 private:
     int m_levelOfDetail = 0;
+    bool m_preserveAlpha = false;
 
     KoPatternSP m_pattern = 0;
 
